# hci-quality

./: .gitignore  .mcp.json  LICENSE  README.md  config.toml  create_dirfiles.sh  pyproject.toml
.claude/agents/: docs.md  patch.md  rca.md  regression.md  reproduce.md  security.md  triage.md
.claude/commands/: e2e-smoke.md  mvp-bootstrap.md
configs/: customer_terms.yaml  golden_tds.yaml  logging.yaml  module_owners.yaml
docs/: architecture.md  mvp-bootstrap.md  operations.md  references.md  roadmap.md
docs/adr/: 0001-no-docker-windows.md  0002-phoenix-over-langfuse.md  0003-fastapi-over-open-swe.md  0004-claude-code-as-hands.md  0005-internal-mirror-over-offline-wheel.md  0006-multi-language-symbol-registry.md
scripts/: 01_bootstrap_env.ps1  02_verify_env.ps1  03_ingest_td.ps1  04_build_codegraph.ps1  05_start_phoenix.ps1  06_start_webhook.ps1  07_run_eval.ps1  99_e2e_smoke.ps1  create_scaffold.ps1
src/hci_quality/eval/: eval_join.py  golden_tds_mine.py
src/hci_quality/graph/: cross_boundary.py  kuzu_build.py  tree_sitter_extract.py
src/hci_quality/ingest/: drain_parser.py  lightrag_adapter.py  stack_extract.py  td_normalize.py  term_dict.py
src/hci_quality/lang_bridge/: multi_lang_eval.py  multi_lang_graph.py  multi_lang_log_parser.py  symbol_registry.py
src/hci_quality/mcp/: __init__.py  _common.py  kuzu_server.py  lightrag_server.py  td_server.py
src/hci_quality/utils/: paths.py  (+1 more)
tests/: __init__.py
tests/integration/: test_eval_join.py  test_mcp_roundtrip.py
tests/unit/: test_cross_boundary.py  test_symbol_registry.py  test_term_dict.py
(+3 files in other folders)
